<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UserActivity"
    android:background="@color/purple"
    android:padding="16dp">

    <TextView
        android:id="@+id/txt_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:fontFamily="@font/cabin"
        android:gravity="center"
        android:layout_marginTop="35dp"
        />

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColorHint="@color/white"
        android:hint="@string/name"
        android:gravity="center_horizontal"
        android:fontFamily="@font/cabin"
        android:layout_centerInParent="true"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/btn_save"
        android:backgroundTint="@color/purple_200"
        android:textColorHint="@color/white"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/cabin"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:paddingHorizontal="40dp"
        />

</RelativeLayout>